kubernetes/apps/development/forgejo/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: Misc
spec:
  hostnames:
    - "git.${SECRET_DOMAIN}"
  parentRefs:
    - name: external
      namespace: network
  rules:
    - backendRefs:
        - name: forgejo-http
          port: 3000
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Real-Ip
                value: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
      timeouts:
        request: 300s
