kubernetes/apps/development/forgejo/app/tcproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: forgejo-ssh
spec:
  parentRefs:
    - name: external
      namespace: network
  rules:
    - backendRefs:
        - name: forgejo-ssh
          port: 22
